--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,62 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Laravel #
+######################
+node_modules/
+public/storage
+public/hot
+public_html/storage
+public_html/hot
+storage/*.key
+/vendor/
 .env
-.env.backup
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.php_cs.cache
+.env.backup
+/.vagrant
+
+# Others #
+######################
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
