--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.2"
+        "laravel/ui": "^2.2",
+        "orangehill/iseed": "^2.6"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
