--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "backpack/permissionmanager": "^6.0",
         "backpack/settings": "^3.0",
         "fideloper/proxy": "^4.2",
+        "freshwork/chilean-bundle": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
