--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
+        "livewire/livewire": "^2.3",
         "orangehill/iseed": "^2.6"
     },
     "require-dev": {
