--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "backpack/crud": "4.1.*",
         "backpack/permissionmanager": "^6.0",
         "backpack/settings": "^3.0",
+        "barryvdh/laravel-dompdf": "^0.8.7",
         "fideloper/proxy": "^4.2",
         "freshwork/chilean-bundle": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
