--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "backpack/crud": "4.1.*",
         "backpack/permissionmanager": "^6.0",
         "backpack/settings": "^3.0",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.2",
         "freshwork/chilean-bundle": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
