--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/ui": "^2.2",
         "livewire/livewire": "^2.3",
         "orangehill/iseed": "^2.6",
+        "qoraiche/laravel-mail-editor": "^2.2",
         "transbank/transbank-sdk": "^1.8"
     },
     "require-dev": {
