--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "livewire/livewire": "^2.3",
         "orangehill/iseed": "^2.6",
         "qoraiche/laravel-mail-editor": "^2.2",
-        "transbank/transbank-sdk": "^1.8"
+        "transbank/transbank-sdk": "^1.8",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
