--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
-        "livewire/livewire": "^2.3",
+        "livewire/livewire": "2.3.0",
         "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^2.6",
         "qoraiche/laravel-mail-editor": "^2.2",
