--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
         "livewire/livewire": "2.3.0",
+        "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^2.6",
         "qoraiche/laravel-mail-editor": "^2.2",
-        "tymon/jwt-auth": "^1.0",
         "rinvex/laravel-subscriptions": "^4.1",
-        "transbank/transbank-sdk": "^1.8"
+        "transbank/transbank-sdk": "^1.8",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
