--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "orangehill/iseed": "^2.6",
         "qoraiche/laravel-mail-editor": "^2.2",
         "rinvex/laravel-subscriptions": "^4.1",
+        "riverskies/laravel-mobile-detect": "^1.3",
         "transbank/transbank-sdk": "^1.8",
         "tymon/jwt-auth": "^1.0"
     },
