Update htaccess and routes

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -23,6 +23,13 @@
     RewriteRule ^ index.php [L]
 </IfModule>
 
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteCond %{HTTP_HOST} ^filsavirtual.cl$ [OR]
+  RewriteCond %{HTTP_HOST} ^www.filsavirtual.cl$
+  RewriteRule (.*)$ https://www.prolibro.cl/$1 [R=301,L]
+</IfModule>
+
 <IfModule mod_expires.c>
   ExpiresActive On
 
