--- a/public/.htaccess
+++ b/public/.htaccess
@@ -26,7 +26,8 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteCond %{HTTP_HOST} ^filsavirtual.cl$ [OR]
-  RewriteCond %{HTTP_HOST} ^www.filsavirtual.cl$
+  RewriteCond %{HTTP_HOST} ^www.filsavirtual.cl$ [OR]
+  RewriteCond %{HTTP_HOST} http://www.prolibro.cl$
   RewriteRule (.*)$ https://www.prolibro.cl/$1 [R=301,L]
 </IfModule>
 
