--- a/public/.htaccess
+++ b/public/.htaccess
@@ -27,7 +27,7 @@
   RewriteEngine On
   RewriteCond %{HTTP_HOST} ^filsavirtual.cl$ [OR]
   RewriteCond %{HTTP_HOST} ^www.filsavirtual.cl$ [OR]
-  RewriteCond %{HTTP_HOST} http://www.prolibro.cl$
+  RewriteCond %{HTTP_HOST} ^www.prolibro.cl$
   RewriteRule (.*)$ https://www.prolibro.cl/$1 [R=301,L]
 </IfModule>
 
