--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,9 @@
 <IfModule mod_rewrite.c>
+    RewriteCond %{SERVER_PORT} ^80$
+    RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
+</IfModule>
+
+<IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
